feat: preview player map movement
